Bug 14042 - Memory leak when updating AD schema
Summary: Memory leak when updating AD schema
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.11.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-16 22:51 UTC by Garming Sam
Modified: 2026-03-31 03:40 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Garming Sam 2019-07-16 22:51:40 UTC
This is a privileged operation and unlikely to happen very often, but reloads of the schema can cause significant amounts of memory to be leaked.

(opening in case of backport)
Comment 1 Samba QA Contact 2021-09-05 03:25:13 UTC
This bug was referenced in samba master:

8affe4a1e625104de4ca024fdc3e9cd96498aff3
Comment 2 Samba QA Contact 2021-09-08 13:32:06 UTC
This bug was referenced in samba v4-15-test:

86d3397f852e4e6e5fa5096d91c4263e26742d0f
Comment 3 Samba QA Contact 2021-09-09 06:38:16 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.0rc6):

86d3397f852e4e6e5fa5096d91c4263e26742d0f
Comment 4 Samba QA Contact 2021-09-10 15:25:13 UTC
This bug was referenced in samba v4-13-test:

02c40fd92dcd7224228dc232d5fdf0738d313a36
Comment 5 Samba QA Contact 2021-09-13 09:25:11 UTC
This bug was referenced in samba v4-14-test:

59f6d56f4ef4a8cde8a4e50bb6ab1a51093de025
Comment 6 Samba QA Contact 2021-09-22 07:04:35 UTC
This bug was referenced in samba v4-13-stable (Release samba-4.13.12):

02c40fd92dcd7224228dc232d5fdf0738d313a36
Comment 7 Samba QA Contact 2021-10-05 13:19:05 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.8):

59f6d56f4ef4a8cde8a4e50bb6ab1a51093de025
Comment 8 Jennifer Sutton 2026-03-31 03:40:55 UTC
Closing as fixed.